// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label code generator no values for attributes 1`] = `
"
      <label
        for=\\"\\"
        >
        
        
      </label>
    "
`;

exports[`Label code generator values for all attributes 1`] = `
"
      <label
        for=\\"name\\"
        >
        <span class=\\"builder-label-text\\">your name</span>
        
      </label>
    "
`;
